# main

apps/gui-qt/scheli/: heliwidget.cpp
apps/gui-qt/scmv/: mvmainwindow.cpp
apps/gui-qt/scrttv/: mainwindow.cpp
apps/tools/scm/plugins/: CMakeLists.txt
