MACRO(MAKE_MONITOR_PLUGIN _plugin)
	SET(MONITOR_PLUGIN_HEADERS ${_plugin}.h)
	SET(MONITOR_PLUGIN_SOURCES ${_plugin}.cpp)
	SC_ADD_PLUGIN_LIBRARY(MONITOR_PLUGIN ${_plugin} monitor)
	SC_LINK_LIBRARIES_INTERNAL(${_plugin} client mplugin)
ENDMACRO(MAKE_MONITOR_PLUGIN)

MAKE_MONITOR_PLUGIN(memailplugin)
MAKE_MONITOR_PLUGIN(mtextplugin)

# Optional Ncurses package
IF(APPLE)
    # Set this variable to TRUE before calling find_package(Curses) if the ncurses implementation functionality is specifically required.
    SET(CURSES_NEED_NCURSES TRUE)
    FIND_PACKAGE(Curses)
    IF(Curses_FOUND)
        SET(NCURSES_FOUND TRUE)
        SET(NCURSES_INCLUDE_DIR ${CURSES_INCLUDE_DIRS})
        SET(NCURSES_LIBRARY ${CURSES_LIBRARIES})
    ENDIF()
ELSE()
    FIND_PACKAGE(Ncurses)
ENDIF()


IF (NCURSES_FOUND)
    SET(MNCURSES_PLUGIN mncursesplugin)
    INCLUDE_DIRECTORIES(${NCURSES_INCLUDE_DIR})
    MAKE_MONITOR_PLUGIN(${MNCURSES_PLUGIN})
    TARGET_LINK_LIBRARIES(${MNCURSES_PLUGIN} ${NCURSES_LIBRARY})
    # TARGET_LINK_LIBRARIES(memailplugin ${NCURSES_LIBRARY})
ENDIF (NCURSES_FOUND)

